--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -19,13 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="basic1.cpp" />
+    <ClCompile Include="apllied2.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{99B41D66-CFAF-4F1E-A814-5077D43E638B}</ProjectGuid>
+    <ProjectGuid>{A35E4043-473E-447D-AE1E-EF63949CF273}</ProjectGuid>
     <RootNamespace>Project1</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
-    <ProjectName>Project1-bacic</ProjectName>
+    <ProjectName>Project2-applied</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
